# regatta-infopoint

./: .dockerignore  .env  .gitignore  .rustfmt.toml  AGENTS.md  CACHE_IMPROVEMENTS.md  CUSTOM_DB_CONNECTIONS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  cert.pem  config_improvements.md  docker-compose.yml  key.pem  rest_api.http  run_docker.sh  rust-toolchain.toml  tree.txt  update.sh
.github/workflows/: build_and_push_docker.yml  ci.yaml  coverage.yml
aquarius/: Cargo.toml
aquarius/src/: client.rs  comm.rs  connection.rs  error.rs  event.rs  lib.rs  messages.rs  utils.rs
aquarius/src/db/: flags.html  flags2.html  flags_scraper.rs  mod.rs
aquarius/src/db/model/: age_class.rs  athlete.rs  block.rs  boat_class.rs  club.rs  crew.rs  entry.rs  filters.rs  heat.rs  heat_entry.rs  heat_registration.rs  heat_result.rs  mod.rs  race.rs  referee.rs  regatta.rs  registration.rs  schedule.rs  score.rs  statistics.rs  utils.rs
aquarius/src/db/tiberius/: connection.rs  mod.rs  pool.rs  row_column.rs
aquarius/src/tiberius/: mod.rs
db/: Cargo.toml  review.md
db/src/: aquarius.rs  cache.rs  error.rs  lib.rs
db/src/aquarius/: flags.html  flags_scraper.rs  mod.rs
db/src/aquarius/model/: age_class.rs  athlete.rs  block.rs  boat_class.rs  club.rs  crew.rs  entry.rs  filters.rs  heat.rs  heat_entry.rs  heat_result.rs  message.rs  mod.rs  notification.rs  problems.rs  race.rs  referee.rs  regatta.rs  schedule.rs  score.rs  statistics.rs  utils.rs
db/src/cache/: config.rs  cost.rs  heap_size.rs
db/src/tiberius/: connection.rs  mod.rs  pool.rs  row_column.rs  user_pool.rs
db/src/timekeeper/: mod.rs  time_stamp.rs  timestamp.rs  timestrip.rs
doc/: metrics.txt  metrics_2023-10-06.txt  metrics_2023-10-07.txt  metrics_2023-10-08.txt  rest_api.http
infoportal/: Cargo.toml  review.md
infoportal/src/: auth.rs  config.rs  main.rs  peak_alloc.rs
infoportal/src/db/: aquarius.rs  cache.rs  cache_improved.rs  mod.rs  user_pool.rs
infoportal/src/db/model/: age_class.rs  athlete.rs  block.rs  boat_class.rs  club.rs  crew.rs  filters.rs  heat.rs  heat_registration.rs  heat_result.rs  mod.rs  race.rs  referee.rs  regatta.rs  registration.rs  schedule.rs  score.rs  statistics.rs  utils.rs
infoportal/src/db/tiberius/: mod.rs  pool.rs
infoportal/src/http/: api_doc.rs  auth.rs  flags_scraper.rs  mod.rs  monitoring.rs  reports.rs  rest_api.rs  server.rs  user_db_middleware.rs  ws.rs
infoportal/src/http/rest_api/: athlete.rs  authentication.rs  club.rs  misc.rs  monitoring.rs  notification.rs  notifications.rs  race.rs  timekeeping.rs
src/: aquarius_db.rs  config.rs  connection_manager.rs  db.rs  db_utils.rs  main.rs  rest_api.rs
src/api/: server.rs
src/db/: aquarius.rs  cache.rs  mod.rs  model.rs  pool.rs  utils.rs
src/db/model/: age_class.rs  athlete.rs  block.rs  boat_class.rs  club.rs  column.rs  crew.rs  filters.rs  heat.rs  heat_registration.rs  heat_result.rs  mod.rs  race.rs  referee.rs  regatta.rs  registration.rs  schedule.rs  score.rs  statistics.rs  utils.rs
src/db/sql/: builder.rs  error.rs  mod.rs
src/db/tiberius/: mod.rs  pool.rs  row_column.rs
src/http/: api_doc.rs  auth.rs  crawler.rs  flag_scraper.rs  flags.html  mod.rs  monitor.rs  monitoring.rs  rest_api.rs  server.rs  session.rs  ws.rs
src/http/odata/: edm.rs  mod.rs
static/: Gruntfile.js  index.html  package-lock.json  package.json  review.md  tsconfig.json  ui5.yaml
static/infopoint/: Component.js  index.html  manifest.json
static/infopoint/controller/: App.controller.js  Base.controller.js  HeatRegistrationsTable.controller.js  Heats.controller.js  HeatsTable.controller.js  Launchpad.controller.js  RaceRegistrationsTable.controller.js  RacesTable.controller.js  ScoringTable.controller.js
static/infopoint/i18n/: i18n_de.properties  i18n_en.properties
static/infopoint/model/: Formatter.js
static/infopoint/view/: App.view.xml  HeatRegistrationsTable.view.xml  Heats.view.xml  HeatsTable.fragment.xml  HeatsTable.view.xml  Launchpad.view.xml  RaceRegistrationsTable.view.xml  RacesTable.view.xml  ScoringTable.view.xml
static/infoportal/: Component.js  index.html  manifest.json
static/infoportal/controller/: Base.controller.js  BaseTable.controller.js  ClubParticipationsTable.controller.js  ClubRegistrationsTable.controller.js  ClubsTable.controller.js  HeatRegistrationsTable.controller.js  HeatsTable.controller.js  Kiosk.controller.js  Launchpad.controller.js  ParticipatingClubsTable.controller.js  RaceRegistrationsTable.controller.js  RacesTable.controller.js  ScoringTable.controller.js  Statistics.controller.js
static/infoportal/css/: style.css
static/infoportal/i18n/: i18n_de.properties  i18n_en.properties
static/infoportal/model/: DataProvider.js  Formatter.js
static/infoportal/view/: ClubParticipationsTable.view.xml  ClubRegistrationsTable.view.xml  ClubsTable.view.xml  HeatRegistrationsTable.view.xml  HeatsFilterDialog.fragment.xml  HeatsTable.fragment.xml  HeatsTable.view.xml  Kiosk.view.xml  Launchpad.view.xml  LoginPopover.fragment.xml  ParticipatingClubsTable.view.xml  RaceRegistrationsTable.view.xml  RacesFilterDialog.fragment.xml  RacesTable.view.xml  ScoringTable.view.xml  Statistics.view.xml
static/ui/: Component.js  index.html  index.js  manifest.json
static/ui/controller/: App.controller.js  HeatRegistrationsTable.controller.js  HeatsTable.controller.js  HelloPanel.controller.js  InvoiceList.controller.js
static/ui/css/: style.css
static/ui/i18n/: i18n.properties  i18n_de.properties
static/ui/model/: DayFormatter.js  (+5 more)
static/webapp/: Component.js  Component.ts  flags.html  index.html  index_v2.html  manifest.json
timekeeper/: Cargo.toml  README.md
timekeeper/src/: app.rs  args.rs  client.rs  error.rs  lib.rs  main.rs  messages.rs  timestrip.rs  utils.rs
timekeeper/src/app/: heats_tab.rs  logs_tab.rs  mod.rs  selected_tab.rs  timestrip_popup.rs  timestrip_tab.rs  utils.rs
timekeeper/src/app/tabs/: heats.rs  logs.rs  measurement.rs  mod.rs  timestrip.rs
timekeeper/src/aquarius/: client.rs  comm.rs  messages.rs  mod.rs
(+97 files in other folders)
