[workspace]
resolver = "3"
members = ["db", "infoportal", "timekeeper"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.90.0"
authors = ["Markus Ofterdinger <markus@ofterdinger.de>"]
repository = "https://github.com/Heidelberger-Regattaverband/regatta-infopoint.git"

[workspace.dependencies]
# Database + Pool
# https://github.com/prisma/tiberius#feature-flags
tiberius = { version = "0", features = [
  "chrono",
  "rustls",
  "tds73",
  "rust_decimal",
], default-features = false }
bb8 = { version = "0" }
chrono = { version = "0", features = ["serde"] }
stretto = { version = "0", features = ["async"] }

# Async stuff
futures = { version = "0" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
tokio-util = { version = "0", features = ["compat"] }

# Rustls
rustls = { version = "0" }
rustls-pki-types = { version = "1" }
rustls-pemfile = { version = "2" }

# Enum and string utils: https://github.com/Peternator7/strum
strum = { version = "0" }
strum_macros = { version = "0" }

# Utils
anyhow = { version = "1" }
dotenv = { version = "0" }
log = { version = "0" }
env_logger = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
scraper = { version = "0" }
clap = { version = "4", features = ["derive"] }
colored = { version = "3" }
uptime_lib = { version = "0" }

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = "fat"
