[workspace]
resolver = "3"
members = ["db", "infoportal", "timekeeper"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91.1"
authors = ["Markus Ofterdinger <markus@ofterdinger.de>"]
repository = "https://github.com/Heidelberger-Regattaverband/regatta-infopoint.git"

[workspace.dependencies]
# database + pool + cache
# https://github.com/prisma/tiberius#feature-flags
tiberius = { version = "0", features = [
  "chrono",
  "rustls",
  "tds73",
  "rust_decimal",
], default-features = false }
bb8 = { version = "0.9" }
chrono = { version = "0.4", features = ["serde"] }
stretto = { version = "0.8", features = ["async"] }

# async stuff
futures = { version = "0.3" }
tokio = { version = "1.48", features = ["net", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }

# rustls
rustls = { version = "0.23" }
rustls-pki-types = { version = "1.13" }
rustls-pemfile = { version = "2.2" }

# enum and string utils: https://github.com/Peternator7/strum
strum = { version = "0.27" }
strum_macros = { version = "0.27" }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# logging
log = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = { version = "0.11" }

# utils
dotenv = { version = "0.15" }
scraper = { version = "0.24" }
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3" }
uptime_lib = { version = "0.3" }
thiserror = { version = "2" }

# HTTP
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "decimal"] }

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = "fat"
