[package]
name = "aquarius"
description = "An Aquarius client implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
db = { path = "../db" }
encoding_rs = { version = "0.8" }
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
