[package]
name = "db"
description = "The Aquarius DB layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Utils
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
log.workspace = true
scraper.workspace = true
thiserror.workspace = true

# DB
tiberius.workspace = true
chrono.workspace = true
bb8.workspace = true
stretto.workspace = true

# Enum and string utils: https://github.com/Peternator7/strum
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
tokio-shared-rt = "0"
