[package]
name = "infoportal"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "Infoportal des Heidelberger Regatta-Verbands"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquarius = { path = "../aquarius" }
anyhow = "1"
env_logger = "0"
log = "0"
dotenv = "0"
chrono.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# Actix + Middlewares
actix = { version = "0" }
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-actors = { version = "4" }
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-identity = "0"
actix-files = "0"
actix-extensible-rate-limit = "0"
actix-web-prom = { version = "0", features = ["process"] }
prometheus = { version = "0", default-features = false }
rustls = "0.23"
rustls-pki-types = "1"
rustls-pemfile = "2"

# OpenAPI
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

# Database + Pool
bb8.workspace = true
async-trait.workspace = true
tiberius.workspace = true
stretto = { version = "0", features = ["async"] }

# Utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
futures = "0"
sysinfo = "0"

# html
scraper = "0"

[dev-dependencies]
tokio-shared-rt = "0"
