[package]
name = "infoportal"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "Infoportal des Heidelberger Regatta-Verbands"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
workspace = "../"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquarius = { path = "../aquarius" }

# Utils
anyhow.workspace = true
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true

# Async stuff
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Actix + Middlewares
actix = { version = "0" }
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-actors = { version = "4" }
actix-session = { version = "0", features = ["cookie-session"] }
actix-identity = "0"
actix-files = "0"
actix-extensible-rate-limit = "0"
actix-web-prom = { version = "0", features = ["process"] }
prometheus = { version = "0", default-features = false }
rustls = "0.23"
rustls-pki-types = "1"
rustls-pemfile = "2"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras", "time"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
zip = "=2.5.0" # Force the zip dependency to version 2.4.2 to avoid conflicts with utoipa-swagger-ui

# Database + Pool
tiberius.workspace = true
bb8.workspace = true
chrono.workspace = true
stretto.workspace = true

# Utils
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
sysinfo = "0"
uptime_lib = "0"

[dev-dependencies]
tokio-shared-rt = "0"

[build-dependencies]
built = { version = "0", features = ["chrono", "git2"] }
