[package]
name = "infoportal"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "Infoportal des Heidelberger Regatta-Verbands"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
workspace = "../"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }

# Utils
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Async stuff
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Actix + Middlewares
actix = { version = "0.13" }
actix-web = { version = "4.11", features = ["rustls-0_23"] }
actix-web-actors = { version = "4.3" }
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-identity = "0.9"
actix-files = "0.6"
actix-extensible-rate-limit = "0.4"
actix-web-prom = { version = "0.10", features = ["process"] }
prometheus = { version = "0.14", default-features = false }
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Database + Pool
tiberius.workspace = true

# Utils
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.38"
uptime_lib.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-shared-rt = "0"

[build-dependencies]
built = { version = "0", features = ["chrono", "git2"] }
