[package]
name = "timekeeper"
description = "A simple time tracking tool for Aquarius"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
db = { path = "../db" }

clap.workspace = true
encoding_rs = { version = "0.8" }
chrono.workspace = true

# UI + terminal
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.29" }

# logging
tracing.workspace = true
tui-logger = { version = "0.17" }
tui-textarea = { version = "0.7" }

# Enum and string utils: https://github.com/Peternator7/strum
strum.workspace = true
strum_macros.workspace = true

# Async stuff
tokio.workspace = true

# DB
tiberius.workspace = true

[dev-dependencies]
env_logger.workspace = true

[build-dependencies]
built = "0"
