[package]
name = "timekeeper"
description = "A simple time tracking tool for Aquarius"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
aquarius = { path = "../aquarius" }
db = { path = "../db" }

clap.workspace = true
chrono.workspace = true

# UI + terminal
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.29" }

# logging
tracing.workspace = true
tracing-subscriber.workspace = true
tui-logger = { version = "0.18" }
tui-textarea = { version = "0.7" }

# Enum and string utils: https://github.com/Peternator7/strum
strum.workspace = true
strum_macros.workspace = true

# Async stuff
tokio.workspace = true

# DB
tiberius.workspace = true

thiserror.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[build-dependencies]
built = "0"
